--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Django==1.7.4
-uWSGI==2.0.9
-Fabric==1.10.1
-Pillow==2.7.0
-psycopg2==2.5.4
-django-tagging==0.3.4
-csscompressor==0.9.3
+Django==1.11.20
+uWSGI==2.0.18
+Pillow==5.4.1
+psycopg2-binary==2.7.7
+django-tagging==0.4.6
+csscompressor==0.9.5
